--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/qs": "^6.9.0",
+    "axios": "^0.19.0",
     "core-js": "^3.4.4",
+    "qs": "^6.9.1",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
